# emomusic

./: .gitignore  Dockerfile  README.md  gh.Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
emomusic/: data_loader.py  data_preprocessing.py  main.py  models.py  music_predict.py  test.py
emomusic/Models/: model_both.pt
libsndfile-binaries/: README.md
